--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,9 @@
               "src/fonts"
             ],
             "styles": [
+              "./node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "src/css/bootstrap.min.css",
@@ -130,10 +133,40 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/css/bootstrap.min.css",
+              "src/css/owl.carousel.min.css",
+              "src/css/magnific-popup.css",
+              "src/css/font-awesome.min.css",
+              "src/css/themify-icons.css",
+              "src/css/gijgo.css",
+              "src/css/nice-select.css",
+              "src/css/flaticon.css",
+              "src/css/slicknav.css",
+              "src/css/style.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.js",
+              "src/js/jquery-3.7.0.js",
+              "src/js/vendor/modernizr-3.5.0.min.js",
+              "src/js/vendor/jquery-1.12.4.min.js",
+              "src/js/popper.min.js",
+              "src/js/bootstrap.min.js",
+              "src/js/isotope.pkgd.min.js",
+              "src/js/ajax-form.js",
+              "src/js/waypoints.min.js",
+              "src/js/jquery.counterup.min.js",
+              "src/js/imagesloaded.pkgd.min.js",
+              "src/js/scrollIt.js",
+              "src/js/jquery.scrollUp.min.js",
+              "src/js/wow.min.js",
+              "src/js/gijgo.min.js",
+              "src/js/nice-select.min.js",
+              "src/js/jquery.slicknav.min.js",
+              "src/js/jquery.magnific-popup.min.js",
+              "src/js/plugins.js",
+              "src/js/jquery.ajaxchimp.min.js",
+              "src/js/jquery.form.js",
+              "src/js/jquery.validate.min.js",
               "src/js/main2.js"
             ]
           }
