--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bootstrap": "^5.1.3",
+    "google-libphonenumber": "^3.2.32",
+    "intl-tel-input": "^17.0.3",
     "jquery": "^3.7.0",
+    "ngx-bootstrap": "^7.1.2",
+    "ngx-intl-tel-input": "^3.1.1",
     "ngx-owl-carousel-o": "^7.0.4",
     "rxjs": "^7.5.7",
     "save": "^2.9.0",
