--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "google-libphonenumber": "^3.2.32",
     "intl-tel-input": "^17.0.3",
@@ -45,5 +47,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
+  },
+  "browser":{
+    "fs":false,
+    "path":false,
+    "os":false
   }
 }
